# Itenary-Planner

./: index.js  main.py  package-lock.json  package.json  pyproject.toml
api/: app.js
controllers/: planner.controller.js
routes/: planner.route.js  static.route.js
services/: .gitignore  README.md  agent.py  main.py  main2.py  pyproject.toml  requirements.txt  run.py  tools.py
utils/: logger.js  response.js
view/assets/: scripts.js  styles.css
view/pages/: PlanningPage.ejs  index.ejs
